--- a/magnolia-module-geologix/src/main/resources/geologix/apps/wagenplaene.yaml
+++ b/magnolia-module-geologix/src/main/resources/geologix/apps/wagenplaene.yaml
@@ -404,6 +404,7 @@ subApps:
                 class: info.magnolia.ui.form.field.definition.TextFieldDefinition
               - name: image
                 label: Wagenplan
+                required: true
                 class: info.magnolia.ui.form.field.definition.LinkFieldDefinition
                 targetWorkspace: dam
                 appName: assets
