--- a/magnolia-module-geologix/src/main/resources/geologix/apps/zugkompositionen.yaml
+++ b/magnolia-module-geologix/src/main/resources/geologix/apps/zugkompositionen.yaml
@@ -400,6 +400,7 @@ subApps:
                 field:
                   name: wagen
                   label: Wagen
+                  required: true
                   class: info.magnolia.ui.form.field.definition.LinkFieldDefinition
                   targetWorkspace: wagen
                   targetTreeRootPath: /
